# ResearchMind

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: main.py
app/config/: database.py  logging_config.py  settings.py
app/constants/: app_constants.py  messages.py  prompts.py
app/models/: conversation.py  document.py  evaluation.py  prompt_result.py  prompt_template.py  security_log.py
app/routers/: Untitled  document_indexer.py  evaluation.py  hitl.py  llm.py  prompt_studio.py  research_agent.py  security.py  tools.py  vector_store.py
app/schemas/: conversation.py  document.py  evaluation.py  prompt_template.py  security.py
app/services/: conversation_service.py  document_indexer.py  evaluation_service.py  llm_gateway.py  memory_service.py  prompt_studio.py  reranker.py  research_agent.py  research_tools.py  security_service.py  vector_store.py
app/services/agents/: fact_check_agent.py  hitl_supervisor.py  research_agent.py  summarisation_agent.py  supervisor_agent.py
app/ui/: app.py
app/ui/tabs/: document_ingestion.py  evaluation.py  experiment_studio.py  research_chat.py  security_log.py  settings.py
